add_library(TimerService STATIC src/ControlledClock.cpp src/TimerService.cpp src/Timer.cpp)
target_include_directories(TimerService PUBLIC include)
add_executable(TimerServiceTest test/TimerServiceTests.cpp)
target_include_directories(TimerServiceTest PUBLIC include)
target_link_libraries(TimerServiceTest GTest::gtest_main GTest::gmock_main TimerService)
include(GoogleTest)
gtest_discover_tests(TimerServiceTest)